--- a/index.html
+++ b/index.html
@@ -1,83 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css"
-      integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,600,700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <title>Twitter-Clone</title>
-  </head>
-  <body>
-    <!-- MAIN PAGE -->
-    <section class="main-page">
-      <div class="left">
-        <div class="left-content">
-          <div>
-            <i class="fas fa-search"></i>
-            <h3 class="left-content-heading">Find your interest</h3>
-          </div>
-          <div>
-            <i class="fas fa-user-friends"></i>
-            <h3 class="left-content-heading">
-              Explore what people are talking about
-            </h3>
-          </div>
-          <div>
-            <i class="fas fa-comment"></i>
-            <h3 class="left-content-heading">Join the people</h3>
-          </div>
-        </div>
-      </div>
-      <div class="right">
-        <form class="right-content-form">
-          <input
-            type="text"
-            class="user-info"
-            placeholder="Phone, email or username"/>
-          <div>
-            <input type="password" class="password" placeholder="Password" />
-            <label>Forgot password?</label>
-          </div>
-          <button type="button" class="btn-top">Log In</button>
-        </form>
-        <div class="middle-content">
-          <i class="fab fa-twitter"></i>
-          <h1>Explore what's happening in the world</h1>
-          <h4>Join twitter today</h4>
-           <button type="button" class="sign-up main-btn">Sign Up</button>
-           <button type="button" class="log-in main-btn" ><a href="login.html">Log In</a></button>
-          
-        </div>
-      </div>
-      <footer class="main-page-footer">
-        <ul>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">Help</a></li>
-          <li><a href="#">Terms</a></li>
-          <li><a href="#">Apps</a></li>
-          <li><a href="#">Settings</a></li>
-          <li><a href="#">Contact</a></li>
-          <li><a href="#">Status</a></li>
-          <li><a href="#">Privacy Policy</a></li>
-          <li><a href="#">Brand</a></li>
-          <li><a href="#">Developers</a></li>
-          <li><a href="#">&copy; 2019 Twitter</a></li>
-        </ul>
-      </footer>
-    </section>
 
-     <!-- SCRIPTS -->
-     <script src="script.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css"
+    integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous" />
+  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,600,700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
+  <title>Twitter-Clone</title>
+</head>
+
+<body>
+  <!-- MAIN PAGE -->
+  <section class="main-page">
+    <div class="left">
+      <div class="left-content">
+        <div>
+          <i class="fas fa-search"></i>
+          <h3 class="left-content-heading">Find your interest</h3>
+        </div>
+        <div>
+          <i class="fas fa-user-friends"></i>
+          <h3 class="left-content-heading">
+            Explore what people are talking about
+          </h3>
+        </div>
+        <div>
+          <i class="fas fa-comment"></i>
+          <h3 class="left-content-heading">Join the people</h3>
+        </div>
+      </div>
+    </div>
+    <div class="right">
+      <form class="right-content-form">
+        <input type="text" class="user-info" placeholder="Phone, email or username" />
+        <div>
+          <input type="password" class="password" placeholder="Password" />
+          <label>Forgot password?</label>
+        </div>
+        <button type="button" class="btn-top"><a href="login.html">Log In</a></button>
+      </form>
+      <div class="middle-content">
+        <i class="fab fa-twitter"></i>
+        <h1>Explore what's happening in the world</h1>
+        <h4>Join twitter today</h4>
+        <button type="submit" class="sign-up main-btn"><a href="cadastro.html">Sign Up</a>
+        </button>
+        <button type="button" class="log-in main-btn"><a href="login.html">Log In</a></button>
+
+      </div>
+    </div>
+    <footer class="main-page-footer">
+      <ul>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Help</a></li>
+        <li><a href="#">Terms</a></li>
+        <li><a href="#">Apps</a></li>
+        <li><a href="#">Settings</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><a href="#">Status</a></li>
+        <li><a href="#">Privacy Policy</a></li>
+        <li><a href="#">Brand</a></li>
+        <li><a href="#">Developers</a></li>
+        <li><a href="#">&copy; 2019 Twitter</a></li>
+      </ul>
+    </footer>
+  </section>
+
+  <!-- SCRIPTS -->
+  <script src="script.js"></script>
+</body>
+
 </html>
