Alteração nome do usuário e Foto

--- a/home.html
+++ b/home.html
@@ -35,9 +35,9 @@
          </div>
          <div class="user">
            <div class="user-img-wrapper">
-             <img src="images/user1.jpg" alt="user" />
+             <img src="images/latrell.jfif" alt="user" />
            </div>
-           <a href="#" class="user-link light-text">Jane Smith</a>
+           <a href="#" class="user-link light-text">Latrell Spancer</a>
            <i class="fas fa-chevron-down"></i>
          </div>
        </nav>
@@ -51,7 +51,7 @@
           </div>
           <div class="header-post dark-mode-1 border">
             <div class="header-img-wrapper">
-              <img src="images/user1.jpg" alt="user" />
+              <img src="images/latrell.jfif" alt="user" />
             </div>
             <input type="text" placeholder="What's happening" class="dark-mode-2 light-text border" />
             <div class="red-icon">
