--- a/home.html
+++ b/home.html
@@ -37,7 +37,7 @@
            <div class="user-img-wrapper">
              <img src="images/latrell.jfif" alt="user" />
            </div>
-           <a href="#" class="user-link light-text">Latrell Spancer</a>
+           <a href="home.html" class="user-link light-text">Latrell Spancer</a>
            <i class="fas fa-chevron-down"></i>
          </div>
        </nav>
