--- a/profile.html
+++ b/profile.html
@@ -18,7 +18,7 @@
     <nav class="feeds-nav dark-mode-1">
         <div class="icons">
             <div class="red-icon">
-                <a href="#" class="active"><i class="fas fa-home"></i></a>
+                <a href="home.html" class="active"><i class="fas fa-home"></i></a>
             </div>
             <a href="#"><i class="fas fa-hashtag"></i></a>
             <a href="#"><i class="far fa-bell"></i></a>
